<resources>
    <string name="app_name">Lotum</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="error_title">Ooops!</string>
    <string name="data_exception_message">There was an error. Please try again.</string>
    <string name="error_ok_btn_text">OK</string>
    <string name="netword_unavailable_message">Network is unavailable!</string>
    <string name="title_activity_daily_forecast">DailyForecastActivity</string>
    <string name="no_daily_data">No data to display!</string>
    <string name="title_activity_hourly_forecast">HourlyForecastActivity</string>
    <string name="hourly">HOURLY</string>
    <string name="_7_day">7 DAY</string>
    <string name="refresh">Refresh</string>
    <string name="weather_icon">Weather Icon</string>
    <string name="degree_icon">Degree Icon</string>
    <string name="rain_snow">RAIN/SNOW</string>
    <string name="humidity">HUMIDITY</string>
    <string name="N_A">N/A</string>
    <string name="cairo_egypt">Cairo, Egypt</string>
    <string name="disconnected">You\'re disconnected Turn on cellular data or use Wi-Fi.</string>
</resources>
