<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorPrimary"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingRight="@dimen/activity_horizontal_margin">

    <Button
        android:id="@+id/btn_hourly"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="#40FFFFFF"
        android:text="@string/hourly"
        android:textColor="@color/prim_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tv_temperature"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/N_A"
        android:textColor="@android:color/white"
        android:textSize="120sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/cairo_egypt"
        android:textColor="@color/prim_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/progressBar" />

    <ImageView
        android:id="@+id/img_degree"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/degree_icon"
        android:src="@drawable/degree"
        app:layout_constraintBottom_toBottomOf="@+id/tv_temperature"
        app:layout_constraintStart_toEndOf="@+id/tv_temperature"
        app:layout_constraintTop_toTopOf="@+id/tv_temperature"
        app:layout_constraintVertical_bias="0.2" />

    <TextView
        android:id="@+id/tv_humidity_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@android:string/unknownName"
        android:textColor="@color/prim_text"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/tv_precip_value"
        app:layout_constraintEnd_toEndOf="@+id/tv_humidity"
        app:layout_constraintStart_toStartOf="@+id/tv_humidity"
        app:layout_constraintTop_toTopOf="@+id/tv_precip_value" />

    <TextView
        android:id="@+id/tv_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/data_exception_message"
        android:textColor="#80ffffff"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/tv_temperature"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_location"
        app:layout_constraintVertical_bias="0.6" />

    <TextView
        android:id="@+id/tv_summary"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:text="@string/error_title"
        android:textColor="@android:color/white"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/btn_hourly"
        app:layout_constraintEnd_toEndOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_precip_value" />

    <Button
        android:id="@+id/btn_daily"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginLeft="4dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:background="#40FFFFFF"
        android:text="@string/_7_day"
        android:textColor="@color/prim_text"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline" />

    <ImageView
        android:id="@+id/img_icon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/weather_icon"
        android:src="@drawable/cloudy_night"
        app:layout_constraintBottom_toBottomOf="@+id/tv_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.06"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_location" />

    <TextView
        android:id="@+id/tv_humidity"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/humidity"
        android:textColor="@color/prim_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@+id/guideline"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/tv_precip" />

    <ImageView
        android:id="@+id/img_refresh"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/refresh"
        android:src="@drawable/refresh"
        app:layout_constraintBottom_toBottomOf="@id/progressBar"
        app:layout_constraintEnd_toEndOf="@+id/progressBar"
        app:layout_constraintStart_toStartOf="@+id/progressBar"
        app:layout_constraintTop_toTopOf="@+id/progressBar" />

    <ProgressBar
        android:id="@+id/progressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_precip"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:text="@string/rain_snow"
        android:textColor="@color/prim_text"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/guideline"
        app:layout_constraintTop_toBottomOf="@+id/tv_temperature" />

    <TextView
        android:id="@+id/tv_precip_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@android:string/unknownName"
        android:textColor="@color/prim_text"
        android:textSize="24sp"
        app:layout_constraintEnd_toEndOf="@+id/tv_precip"
        app:layout_constraintStart_toStartOf="@+id/tv_precip"
        app:layout_constraintTop_toBottomOf="@+id/tv_precip" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.5" />

</androidx.constraintlayout.widget.ConstraintLayout>
